build,meson: Make use of feature option for introspection
(cherry picked from commit fe53de8bdddb9c86e5b341811872a19e16225838)

--- a/meson.build
+++ b/meson.build
@@ -254,10 +254,7 @@ endif
 util_dep = cc.find_library('util')
 
 # introspection support
-enable_gir = get_option('introspection')
-if enable_gir
-  dependency('gobject-introspection-1.0', version: '>= 0.9.6')
-endif
+enable_gir = dependency('gobject-introspection-1.0', version: '>= 0.9.6', required: get_option('introspection')).found()
 
 # vala support
 enable_vapi = get_option('vapi')
