build,meson: Improve libqcdm build
`libqcdm`'s meson build files have been improved slightly by
removing unnecessary variables shortening their contents.

(cherry picked from commit 93a1d7a60de147a61f0e343a6d8069ceb2a30ded)

--- a/libqcdm/src/meson.build
+++ b/libqcdm/src/meson.build
@@ -1,8 +1,6 @@
 # SPDX-License-Identifier: GPL-2.0-or-later
 # Copyright (C) 2021 Iñigo Martinez <inigomartinez@gmail.com>
 
-libqcdm_inc = include_directories('.')
-
 sources = files(
   'com.c',
   'commands.c',
@@ -16,11 +14,10 @@ libqcdm = static_library(
   'qcdm',
   sources: sources,
   include_directories: top_inc,
-  dependencies: glib_deps,
 )
 
 libqcdm_dep = declare_dependency(
-  include_directories: libqcdm_inc,
+  include_directories: '.',
   link_with: libqcdm,
 )
 
@@ -29,5 +26,4 @@ libqcdm_test = static_library(
   'qcdm-test',
   sources: 'utils.c',
   include_directories: top_inc,
-  dependencies: glib_deps,
 )
