build,meson: Fix suspend/resume option
The suspend/resume option does not build properly if journal option
is disabled. This is beacause the journal option is check to add
suspend/resume code.

It has been fixed by replacing journal option check by the
suspend/resume option.

(cherry picked from commit ab805e09148ce41f5004d2552b263e41ae34735f)

--- a/src/meson.build
+++ b/src/meson.build
@@ -257,7 +257,7 @@ if enable_qrtr
 endif
 
 # Additional suspend/resume support via systemd
-if enable_systemd_journal
+if enable_systemd_suspend_resume
   sources += files('mm-sleep-monitor.c')
 
   deps += [
