build,meson: Fix libmm-test-common name and dependencies
`libmm-test-common` is created using underscores. It also uses
`gio-unix-2.0` as a public dependency but actually it should be
private.

Both issues have been fixed.

(cherry picked from commit db2d2c0cebd40c8979cdec46ac70249047f6ba6a)

--- a/plugins/meson.build
+++ b/plugins/meson.build
@@ -12,16 +12,15 @@ sources = files(
 )
 
 deps = [
-  gio_unix_dep,
   libhelpers_dep,
   libmm_test_generated_dep,
 ]
 
 libmm_test_common = shared_library(
-  'mm_test_common',
+  'mm-test-common',
   sources: sources,
   include_directories: top_inc,
-  dependencies: deps,
+  dependencies: deps + [gio_unix_dep],
   c_args: '-DTEST_SERVICES="@0@"'.format(source_root / 'data/tests'),
 )
 
