build,meson: Improve plugins helper library building
To avoid those cases where a plugin does not need a helper library
an empty array is created.

However, when a helper library has to be built, it is not necessary
to include the created static library in an array.

(cherry picked from commit 80f274b37159777a462d7584fb4fc82876229ac2)

--- a/plugins/meson.build
+++ b/plugins/meson.build
@@ -918,13 +918,11 @@ endif
 foreach plugin_name, plugin_data: plugins
   libhelpers = []
   if plugin_data.has_key('helper')
-    libhelpers += [
-      static_library(
-        'helpers-' + plugin_name,
-        dependencies: libport_dep,
-        kwargs: plugin_data['helper'],
-      )
-    ]
+    libhelpers = static_library(
+      'helpers-' + plugin_name,
+      dependencies: libport_dep,
+      kwargs: plugin_data['helper'],
+    )
   endif
 
   module_args = plugin_data['module']
