build,meson: add SAR interface support in libmm-glib

--- a/libmm-glib/meson.build
+++ b/libmm-glib/meson.build
@@ -36,6 +36,7 @@ headers = files(
   'mm-modem-location.h',
   'mm-modem-messaging.h',
   'mm-modem-oma.h',
+  'mm-modem-sar.h',
   'mm-modem-signal.h',
   'mm-modem-simple.h',
   'mm-modem-time.h',
@@ -88,6 +89,7 @@ sources = files(
   'mm-modem-location.c',
   'mm-modem-messaging.c',
   'mm-modem-oma.c',
+  'mm-modem-sar.c',
   'mm-modem-signal.c',
   'mm-modem-simple.c',
   'mm-modem-time.c',
