build,meson: add SAR interface support in mmcli

--- a/cli/meson.build
+++ b/cli/meson.build
@@ -16,6 +16,7 @@ sources = files(
   'mmcli-modem-location.c',
   'mmcli-modem-messaging.c',
   'mmcli-modem-oma.c',
+  'mmcli-modem-sar.c',
   'mmcli-modem-signal.c',
   'mmcli-modem-simple.c',
   'mmcli-modem-time.c',
